<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textViewNovoNome"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_top"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="sans-serif"
        android:paddingTop="15dp"
        android:text="@string/obj_novo"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAddNome"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/objetivos_shape"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/nome_obj"
        android:inputType="textCapSentences"
        android:maxLength="30"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textAlignment="center"
        android:textColor="#333"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNovoNome" />

    <Button
        android:id="@+id/buttonDialogAdd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/shape_bottom"
        android:backgroundTint="@color/colorGreen"
        android:fontFamily="sans-serif"
        android:text="@string/add"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddNome" />


</android.support.constraint.ConstraintLayout>